--- a/platzi/Juego Kopenom/Juego Kopenom/kopenom.html
+++ b/platzi/Juego Kopenom/Juego Kopenom/kopenom.html
@@ -39,25 +39,28 @@
     </section>
 
     <section id="seleccionar-ataque">
-        <h1 class="title" id="titulo"> KOPENOM!! </h1>
+        <h1 class="title" id="titulo">KOPENOM!</h1>
         <h2>Elige tu ataque:</h2>
 
-        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
-        <p>La mascota de tu enemigo <span id="mascota-enemigo"></span> tiene <span id="vidas-enemigo">3</span> vidas</p>
-
-        <p>
+        <div>
             <button id="boton-fuego">Fuego</button>
             <button id="boton-agua">Agua</button>
             <button id="boton-tierra">Tierra</button>
-        </p>    
+        </div>   
+
+        <div>
+            <section id="mensajes">
+                <!--<p>Tu mascota atacó con FUEGO, la mascota de tu enemigo atacó con TIERRA - GANASTE :) !!!</p>-->
+            </section>
+            <section id="reiniciar">
+                <button id="boton-reiniciar">Reiniciar</button>
+            </section>
+        </div>
+
+        <div>
+            <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
+            <p>La mascota de tu enemigo <span id="mascota-enemigo"></span> tiene <span id="vidas-enemigo">3</span> vidas</p>
+        </div> 
     </section>
-
-<section id="mensajes">
-    <!--<p>Tu mascota atacó con FUEGO, la mascota de tu enemigo atacó con TIERRA - GANASTE :) !!!</p>-->
-</section>
-
-<section id="reiniciar">
-    <button id="boton-reiniciar">Reiniciar</button>
-</section>
 </body>
 </html>
