--- a/platzi/Juego Kopenom/Juego Kopenom/kopenom.html
+++ b/platzi/Juego Kopenom/Juego Kopenom/kopenom.html
@@ -39,14 +39,14 @@
     </section>
 
     <section id="seleccionar-ataque">
-        <h1 class="title" id="titulo">KOPENOM!</h1>
-        
-        <h2>Elige tu ataque:</h2>
+        <h1 class="titulo" id="titulo">Kopenom!</h1>
+
+        <h2 class="subtitulo" id="subtitulo"> Elige tu ataque:</h2>
 
         <div>
-            <button id="boton-fuego">Fuego</button>
-            <button id="boton-agua">Agua</button>
-            <button id="boton-tierra">Tierra</button>
+            <button id="boton-fuego" class="boton-de-ataque">Fuego</button>
+            <button id="boton-agua" class="boton-de-ataque">Agua</button>
+            <button id="boton-tierra" class="boton-de-ataque">Tierra</button>
         </div>   
 
         <div>
